--- a/src/components/Cripto.css
+++ b/src/components/Cripto.css
@@ -1,20 +1,25 @@
 .cripto {
-    border: 1px solid skyblue;
-    border-left: 10px solid skyblue;
-    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.04);
+    border: 1px solid rgba(255, 255, 255, 0.08);
+    border-radius: 8px;
     padding: 1rem;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
-}
-
-
-.info {
-    color: rgb(224, 220, 220);
-}
-
-.label {
-    color: skyblue;
-}
+    transition: all .25s;
+  }
+  
+  .cripto:hover {
+    background: rgba(255, 255, 255, 0.08);
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.35);
+  }
+  
+  .cripto .info {
+    color: #D2D2D5
+  }
+  
+  .cripto h2, .cripto a {
+    color: white;
+    text-decoration: none;
+  }
 
 .cripto-name {
     display: grid;
@@ -24,28 +29,10 @@
     text-align: right;
 }
 
-.link-detalles {
-    display: flex;
-    justify-content: center;
-    /*background-color: brown;*/
-    margin-top: 15px;
-    height: 30px;
-    text-decoration: none;
-}
 
-.btn-detalles {
-    background-color: transparent;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    border: 1px solid white;
-}
-/*.cripto-name h2{
-    background-color: rgb(10, 225, 24);
-}
-.cripto-name h3{
-    background-color: red;
-}*/
+
+
+
 
 .positivo {
     color: rgb(8, 253, 57);
